Made about section more responsive

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <section id="portfolio-collapser" class="flex collapsible pointer-none"></section>
 
     <section id="about" class="three-js-ui">
-      <div style="width: 60%">
+      <div id="about-container">
         <header>
           <h2>Portfolio - Leroy Freeth</h2>
         </header>
